--- a/src/app/tell-us/tell-us/tell-us.component.html
+++ b/src/app/tell-us/tell-us/tell-us.component.html
@@ -1,7 +1,34 @@
 <h2>Felt Report - Tell Us!</h2>
 
 <button (click)="showForm()" mat-raised-button>
-  Show Form
+  Show Felt Report Form
 </button>
 
-<pre *ngIf="response !== null">{{ response | json }}</pre>
+
+<ng-container *ngIf="response; else noResponse">
+  <p class="alert info">
+    Thanks for your response.
+  </p>
+
+  <pre>{{ response | json }}</pre>
+</ng-container>
+
+<ng-template #noResponse>
+  <p>
+    By contributing your experience of the earthquake, either immediately afterward,
+    or whenever it is possible for you to do so, you make a contribution to the
+    scientific body of information about each earthquake.
+
+    You also ensure that your area has been represented in the compilation of the maps of shaking.
+
+    This is a two-way street: not only will you add valuable information on the extent of ground shaking and damage,
+    but in the process we hope you will learn more about how other communities fared and gain a greater
+    understanding of the effects of earthquakes.
+  </p>
+
+  <p>
+    <a href="https://earthquake.usgs.gov/data/dyfi/">
+      Learn More about Did You Feel It?
+    </a>
+  </p>
+</ng-template>
