--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,8 @@
 
 @import './app/shared/css/leaflet-styles.scss';
 @import './app/shared/map-control/legend-control.scss';
+
+/* allow wrapping on small screens */
+.mat-radio-label-content {
+  white-space: normal;
+}
