Rename losspager module/components to pager

--- a/src/app/pager/pager/pager.component.html
+++ b/src/app/pager/pager/pager.component.html
@@ -6,7 +6,7 @@
     <h2>PAGER</h2>
   </ng-container>
 
-  <!-- TODO, build losspager page -->
+  <!-- TODO, build pager page -->
   <ng-container *ngIf="eventService.product$ | async | json as product">
     <pre>{{ product }}</pre>
   </ng-container>
