Add abbr with title text for PAGER title

--- a/src/app/pager/pager/pager.component.html
+++ b/src/app/pager/pager/pager.component.html
@@ -3,7 +3,7 @@
 
   <!-- container with header attribute is added before attribution -->
   <ng-container header>
-    <h2>PAGER</h2>
+    <h2><abbr title="Prompt Assessment of Global Earthquakes for Response">PAGER</abbr></h2>
   </ng-container>
 
   <!-- TODO, build pager page -->
