Add scientific background link in footer

--- a/src/app/pager/pager/pager.component.html
+++ b/src/app/pager/pager/pager.component.html
@@ -11,4 +11,13 @@
     <pre>{{ product }}</pre>
   </ng-container>
 
+  <ng-container footer>
+    <h3>For More Information</h3>
+    <ul>
+      <li>
+        <a href="/data/pager/">Scientific Background for PAGER</a>
+      </li>
+    </ul>
+  </ng-container>
+
 </product-page>
