Add Legend Control and update tests in shared map component

--- a/src/app/map/map/map.component.html
+++ b/src/app/map/map/map.component.html
@@ -3,6 +3,7 @@
     <shared-map
         [overlays]="event | interactiveMapOverlays:params"
         [showLayersControl]="true"
+        [showLegendControl]="true"
         [showScaleControl]="true"
         [interactive]="true">
     </shared-map>
