--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,4 @@
 
 @import './app/shared/css/description-table.scss';
 @import './app/shared/css/leaflet-styles.scss';
+@import './app/shared/css/legend-control.scss';
