--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
@@ -1,6 +1,23 @@
-<basic-pin *ngIf="product"
+<basic-pin *ngIf="product | dyfiCounter: 6 as responses"
     [link]="link"
     [product]="product"
-    [title]="title">
+    [title]="title"
+    [footer]="footer">
+  <div card-content>
+    <div class="dyfi-responses-badge">
+      <div *ngFor="let response of responses"
+          class="responses-digit"
+          [class.empty-digit]="response === '0'">
+        {{response}}
+      </div>
+    </div>
+    <div class="dyfi-responses-abbr" title="DYFI Responses">
+      Responeses
+    </div>
+    <small>
+      Contribute to citizen science. Please <a href="#tellus">tell us</a>
+      about your experience.
+    </small>
+  </div>
 
 </basic-pin>
