--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,15 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 @import './app/shared/css/description-table.scss';
+
+@mixin leaflet-control () {
+  background: #fff;
+  border: 2px solid rgba(0,0,0,0.2);
+  border-radius: 5px;
+  float: left;
+  margin: 10px;
+  padding: 0;
+}
+
 @import './app/shared/css/leaflet-styles.scss';
-@import './app/shared/css/legend-control.scss';
+@import './app/shared/map-control/legend-control.scss';
