--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 
 @import './app/shared/css/description-table.scss';
 
+/* Leaflet Styles */
 @mixin leaflet-control () {
   background: #fff;
   border: 2px solid rgba(0,0,0,0.2);
