--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
@@ -7,12 +7,12 @@
     <div class="dyfi-responses-badge">
       <div *ngFor="let response of responses"
           class="responses-digit"
-          [class.empty-digit]="response === '0'">
-        {{response}}
+          [class.empty-digit]="response.leadingZero">
+        {{ response.value }}
       </div>
     </div>
     <div class="dyfi-responses-abbr" title="DYFI Responses">
-      Responeses
+      Responses
     </div>
     <small>
       Contribute to citizen science. Please <a href="#tellus">tell us</a>
