--- a/src/app/tell-us/question/question.component.html
+++ b/src/app/tell-us/question/question.component.html
@@ -21,14 +21,30 @@
 <ng-template #isSingleSelect>
   <mat-radio-group (change)="onChange($event)">
     <mat-list>
-      <mat-list-item *ngFor="let option of options">
-        <mat-radio-button
-            [checked]="value === option.value"
-            [name]="option.name"
-            [value]="option.value">
-          {{ option.label }}
-        </mat-radio-button>
-      </mat-list-item>
+      <ng-container *ngFor="let option of options">
+        <mat-list-item>
+          <mat-radio-button
+              [checked]="value === option.value"
+              [name]="option.name"
+              [value]="option.value">
+            {{ option.label }}
+          </mat-radio-button>
+        </mat-list-item>
+
+        <mat-list-item *ngIf="option.otherLabel" class="other">
+          <mat-form-field>
+            <input matInput
+                #other
+                (change)="onChange({
+                  type: 'other',
+                  value: other.value
+                })"
+                [disabled]="value !== option.value"
+                [placeholder]="option.otherLabel"
+                [value]="option.otherValue"/>
+          </mat-form-field>
+        </mat-list-item>
+      </ng-container>
     </mat-list>
   </mat-radio-group>
 </ng-template>
