--- a/src/app/shared/map-control/legend-control.scss
+++ b/src/app/shared/map-control/legend-control.scss
@@ -13,32 +13,25 @@
 }
 
 .leaflet-control-legend-visible > .leaflet-control-legend-show,
-.leaflet-control-legend-list,
-.leaflet-control-legend-hide {
+.leaflet-control-legend > .leaflet-control-legend-hide,
+.legend-container {
   display: none;
+}
+
+.leaflet-control-legend-hide {
+  float: right;
+}
+
+.legend-container > img {
+  display: block;
+  max-width: 210px;
 }
 
 .leaflet-control-legend-visible {
   padding: 6px;
 
-  > .leaflet-control-legend-hide {
-    cursor: pointer;
-    width: 100%;
-  }
-
   > .leaflet-control-legend-hide,
-    .leaflet-control-legend-list {
+  > .legend-container {
     display: block;
-  }
-}
-
-
-.leaflet-control-legend-list  {
-  list-style: none;
-  margin: 1em 0;
-  padding: 0;
-
-  > li > img {
-    width: 210px;
   }
 }
