added ground failure link after pager

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -28,6 +28,9 @@
     <app-navigation-item *ngIf="event.hasProducts('losspager')"
         display="PAGER"
         navRouterLink="pager"></app-navigation-item>
+    <app-navigation-item *ngIf="event.hasProducts('ground-failure')"
+        display="Ground Failure"
+        navRouterLink="ground-failure"></app-navigation-item>
   </app-navigation-group>
 
   <app-navigation-group *ngIf="hasScientific(event)">
