--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -30,7 +30,7 @@
       The extent of shaking and ground-failure estimates generally improve
       as more details are incorporated into ShakeMap.
 
-      <ng-container *ngIf="product?.properties['rupture-warning']">
+      <ng-container *ngIf="product?.properties && product.properties['rupture-warning']">
         ShakeMap is currently approximating this earthquake as a
         point source, and the mapped extent of ground failiure commonly
         changes significantly when a fault model is added, especially for
