Switched product type to ground-failure

--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -1,4 +1,4 @@
-<product-page productType="groundfailure">
+<product-page productType="ground-failure">
   <ng-container header>
     <h2>Ground Failure</h2>
   </ng-container>
