Shakemap pin init

--- a/src/app/executive/basic-pin/basic-pin.component.html
+++ b/src/app/executive/basic-pin/basic-pin.component.html
@@ -8,6 +8,11 @@
     <ng-template #noTitle>
       <ng-content select="[card-title]"></ng-content>
     </ng-template>
+
+    <!-- Badge -->
+    <div class="badge">
+      <ng-content select="[badge]"></ng-content>
+    </div>
   </header>
 
   <!-- Content -->
