created ground failure about component

--- a/src/app/ground-failure/about/about.component.html
+++ b/src/app/ground-failure/about/about.component.html
@@ -1,3 +1,70 @@
-<p>
-  about works!
-</p>
+<div>
+  <p>
+    We developed this product to provide an early understanding of
+    the landslides and liquefaction that may have been triggered by
+    this earthquake. It takes time for first responders and experts to
+    survey the actual damage in the area, so our product provides
+    early estimates of what may have happened. Our models provide
+    regional estimates of landslide and liquefaction hazard triggered by
+    this earthquake and do not predict specific occurrences.
+  </p>
+</div>
+
+<div>
+  <p>
+    See the
+    <a href="https://earthquake.usgs.gov/data/grdfailure/background.php">
+    Ground Failure Background</a> page for technical details about the
+    models and alert levels.
+  </p>
+</div>
+
+<div>
+  <h3>How to use this product</h3>
+  <p>
+    If the earthquake directly impacted you or someone you care about, this
+    tool can be useful to understand the impacts form ground motion. This
+    information can help you make informed decisions about your safety or
+    the safety of people you care about. If you are a first responder,
+    building engineer, emergency manager or decision maker, this product
+    can provide early situational awareness of where landslides and
+    liquefaction may have occurred during the critical first hours of
+    response. You can also use it to understand what areas may be hazardous
+    or where people may need immediate assistance.
+  </p>
+</div>
+
+<div class="row">
+  <div class="mobile-one-of-one one-of-two column">
+    <h3>Landslides</h3>
+    <p>
+      Landslides are commonly triggered by earthquakes in mountainous or
+      hilly regions and can cause deaths, injuries, and damage. This general
+      term includes all types of landslides such as rock slides, rock falls,
+      and debris avalanches. In some cases, landslides can travel great
+      distances downslope from where they started. Earthquakes can trigger
+      widespread landsliding that can result in long-term disruption by
+      blocking transportation corridors, destroying infrastructure, and
+      damming waterways causing flooding hazards. In many cases, increased
+      landslide hazard can persist for years after the earthquake as slopes
+      weakened and cracked by the mainshock can be mobilized by aftershocks and
+      precipitation, and debris deposited in channels by landslides can be
+      mobilized into hazardous debris flows.
+    </p>
+  </div>
+  <div class="mobile-one-of-one one-of-two column">
+    <h3>Liquefaction</h3>
+    <p>
+      Liquefaction is the loss of strength of loose, saturated soils caused by
+      earthquake shaking that results in soil that behaves more like a liquid
+      than a solid. Liquefaction can cause buildings to tilt, sand and water to
+      be ejected in "sand volcanoes," and the ground surface to be permanently
+      deformed. Artificial fill is particularly susceptible to liquefaction.
+      Liquefaction-induced lateral spreading is a related phenomenon where
+      blocks of soil spread apart and move down gentle slopes along an
+      underlying liquefied layer. Although liquefaction can cause major damage
+      to buildings and infrastructure, it has not caused nearly as many deaths
+      in the past as landslides.
+    </p>
+  </div>
+</div>
