--- a/src/app/ground-failure/alert-bar/alert-bar.component.html
+++ b/src/app/ground-failure/alert-bar/alert-bar.component.html
@@ -33,13 +33,23 @@
           d="M0,0 L20,-30 L-20,-30 L0,0 Z"
           fill="black">
       </path>
-      <text
-          fill="black"
-          text-anchor="middle"
-          x="0"
-          y="-70">
-        {{ value | number }} {{ units }}
-      </text>
+      <ng-container
+          *ngIf="
+            (first)
+                ? { anchor: 'start', x: -20 }
+            : (last)
+                ? { anchor: 'end', x: 20 }
+            : { anchor: 'middle', x: 0 };
+            let labelPosition
+          ">
+        <text
+            fill="black"
+            [attr.text-anchor]="labelPosition.anchor"
+            [attr.x]="labelPosition.x"
+            y="-70">
+          {{ value | number }} {{ units }}
+        </text>
+      </ng-container>
     </svg:g>
   </svg:g>
 </svg>
