--- a/src/app/ground-failure/hazard-alert/hazard-alert.component.html
+++ b/src/app/ground-failure/hazard-alert/hazard-alert.component.html
@@ -25,8 +25,7 @@
 
       <ng-container *ngSwitchCase="'green'">
         Little or no {{ locals.none }} is expected,
-        but some slope failures could still have occurred on highly
-        susceptible slopes.
+        but could still have occurred in highly susceptible areas.
       </ng-container>
 
       <ng-container *ngSwitchCase="'yellow'">
