--- a/src/app/ground-failure/summary/summary.component.scss
+++ b/src/app/ground-failure/summary/summary.component.scss
@@ -2,7 +2,8 @@
 
 .landslides,
 .liquefaction {
-  min-width: 300px;
+  width: 100%;
+  min-width: 280px;
   max-width: 400px;
 }
 
@@ -15,7 +16,11 @@
     max-width: 968px;
   }
 
+  .landslides, .liquefaction {
+    flex: 1;
+  }
+
   .landslides {
-    margin-right: 2em;
+    margin-right: 1em;
   }
 }
