fixed link, updated phrasing, fixed quotes

--- a/src/app/ground-failure/about/about.component.html
+++ b/src/app/ground-failure/about/about.component.html
@@ -13,9 +13,8 @@
 <div>
   <p>
     See the
-    <a href="https://earthquake.usgs.gov/data/grdfailure/background.php">
-    Ground Failure Background</a> page for technical details about the
-    models and alert levels.
+    <a href="/data/grdfailure/background.php">Ground Failure Background</a>
+    page for technical details about our models and alert levels.
   </p>
 </div>
 
@@ -58,7 +57,7 @@
       Liquefaction is the loss of strength of loose, saturated soils caused by
       earthquake shaking that results in soil that behaves more like a liquid
       than a solid. Liquefaction can cause buildings to tilt, sand and water to
-      be ejected in "sand volcanoes," and the ground surface to be permanently
+      be ejected in &ldquo;sand volcanoes&rdquo;, and the ground surface to be permanently
       deformed. Artificial fill is particularly susceptible to liquefaction.
       Liquefaction-induced lateral spreading is a related phenomenon where
       blocks of soil spread apart and move down gentle slopes along an
