--- a/src/app/shakemap/shakemap/shakemap.component.html
+++ b/src/app/shakemap/shakemap/shakemap.component.html
@@ -10,6 +10,7 @@
   <nav mat-tab-nav-bar>
     <a mat-tab-link [routerLink]="'./map'"
         queryParamsHandling="preserve"
+        [queryParams]="{ 'shakemap-intensity': true }"
         routerLinkActive #map="routerLinkActive"
         [active]="map.isActive">
       ShakeMap
